fixed navbar off center

--- a/src/styles/navlinks.less
+++ b/src/styles/navlinks.less
@@ -1,48 +1,33 @@
-nav {
+.navlinks {
+  display: none;
+}
+.open {
   display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  flex-flow: row wrap;
-  background-color: #2e2e2e;
-  .links {
-    display: none;
-    clip-path: circle(100px at 90% -10%);
-    transition: all 1s ease-out;
-  }
-  .links.open {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 100vh;
-    flex-flow: column;
-    clip-path: circle(200% at 90% -10%);
-    color: whitesmoke;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-flow: column;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  background-color: whitesmoke;
+  z-index: 9999;
 
-    .link {
-      text-decoration: none;
-      h1 {
-        color: whitesmoke;
-      }
-    }
-  }
-  .icon {
-    color: whitesmoke;
+  .navlink {
+    color: #552931;
+    text-decoration: none;
+    cursor: pointer;
   }
 }
-
-// .open {
-//     display: flex;
-//     justify-content: space-evenly;
-//     align-items: center;
-//     position: fixed;
-//     background: #2e2e2e;
-//     width: 100%;
-//     height: 100vh;
-//     flex-flow: column;
-//     clip-path: circle(200% at 90% -10%);
-//   }
-// .links {
-//     display: flex;
-//     clip-path: circle(100px at 90% -10%);
-//     transition: all 1s ease-out;
-//   }
+.nav-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  @media screen and (min-width: 1058px) {
+    padding: 20px 20px 0 0;
+  }
+}
+.logo {
+  @media screen and (min-width: 1058px) {
+    padding: 20px 0 0 20px;
+  }
+}
